--- a/MyMainDiplomProject/Views/Posts/BigPost.cshtml
+++ b/MyMainDiplomProject/Views/Posts/BigPost.cshtml
@@ -72,7 +72,7 @@
                         <img src="https://ichef.bbci.co.uk/news/999/cpsprodpb/15951/production/_117310488_16.jpg" alt="Avatar">
                     </div>
                     <div class="user-details">
-                        <h4 style="color: black;">@item.User.userNikName</h4>
+                            UserId <h4 style="color: black;">@Model.User.userNikName</h4>
                         <p class="comment-date" style="color: black;">@item.CreateDate</p>
                     </div>
                 </div>
