--- a/MyMainDiplomProject/Views/Posts/Index.cshtml
+++ b/MyMainDiplomProject/Views/Posts/Index.cshtml
@@ -1,48 +1,153 @@
-﻿@model IEnumerable<MyMainDiplomProject.Models.Post>
+﻿@model MyMainDiplomProject.Models.ViewModels.PostInfoViewModel
 
-@{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+<head>
+    <title>Головна</title>
+</head>
 
-<h1>Index</h1>
+<div class="panel">
+    Стрічка новин
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Text)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedDateRime)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.User)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Text)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedDateRime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.User.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="search-filter">
+    <h3>Пошук</h3>
+    <div class="post-content">
+
+        <label for="name">Ім'я користувача:</label>
+        <input type="text" id="name" name="name">
+
+        <label for="hashtag">Хештег:</label>
+        <input type="text" id="hashtag" name="hashtag">
+
+        <select id="user-type" name="user-type">
+            <option value="friend">Підписки</option>
+            <option value="all">Усі користувачі</option>
+        </select>
+
+        <button type="submit" onclick="searchPosts()">Пошук</button>
+    </div>
+
+    <div class="post-content">
+        <h3>Хештеги</h3>
+    </div>
+
+    <div class="post-content">
+        <a href=""><p>#історія</p></a>
+        <a href=""><p>#новини</p></a>
+        <a href=""><p>#ChatGPT</p></a>
+        <a href=""><p>#мистецтво</p></a>
+        <a href=""><p>#LeonardoAI</p></a>
+        <a href=""><p>#фізика</p></a>
+    </div>
+</div>
+
+<div id="postContainer">
+    @foreach (var post in Model.Posts)
+    {
+        <div class="post-main-page">
+            <div class="user-info1">
+                <img class="user-image1" src="@Url.Content(Model.UserAdditionalInfos.FirstOrDefault(i => i.UserId == post.UserId)?.UserAvatar ?? "")" alt="User profile picture">
+
+                <div class="user-details1">
+                    <a href="~/Posts/UserProfile/@post.User.Id">
+                        <div class="user-name1">@post.User.userNikName</div>
+                    </a>
+                    <div class="post-date">@post.CreatedDateRime</div>
+                </div>
+                <img class="post-button" src="https://cdn4.iconfinder.com/data/icons/glyphs/24/icons_settings-48.png" alt="Post button">
+            </div>
+
+            <div class="post-hestag">
+                @foreach (var item in post.PostHashTags)
+                {
+                    <a href="">
+                        <label>
+                            @item.Name
+                        </label>
+                    </a>
+                }
+            </div>
+
+            <div class="post-content">
+                <div class="post-text">
+                    <p>@post.Text</p>
+                </div>
+                @if (post.Files.Any())
+                {
+                    <a data-ajax-success="PopUpShow();" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#PopUpContent" href="/Posts/BigPost/@post.Id">
+                        <img class="post-image" src="@Url.Content(post.Files.First().FileName)" alt="Post image" />
+                    </a>
+                }
+            </div>
+
+            <div class="post-stats">
+                <button class="post-button" onclick="addLike(@post.Id)">
+                    <img class="heart-icon" src="https://cdn0.iconfinder.com/data/icons/freebies-2/24/like-1-48.png" alt="Heart icon">
+                </button>
+                @if (post.Likes != null)
+                {
+                    <span class="heart-count">@post.Likes.Count</span>
+                }
+                else
+                {
+                    <span class="heart-count">0</span>
+                }
+                <button class="post-button">
+                    <img class="comment-icon" src="https://cdn3.iconfinder.com/data/icons/linecons-free-vector-icons-pack/32/bubble-48.png" alt="Comment icon">
+                </button>
+                @if (post.Comments != null)
+                {
+                    <span class="heart-count">@post.Comments.Count</span>
+                }
+                else
+                {
+                    <span class="comment-count">0</span>
+                }
+            </div>
+        </div>
+    }
+</div>
+
+<div id="PopUp" style=" background: rgba(0, 0, 0, 0.5); width: 100%; height: 100%; position: fixed  ; top: 0; left: 0; overflow-y: scroll; display: none; z-index: 9999999">
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-12 pt-4 pb-5 mt-5" id="PopUpContent" style="color: black;">
+            </div>
+            <button class="col-1 offset-9 btn btn-primary" style="position: fixed; top: 10%;" onclick="PopUpHide();">✖</button>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    function addLike(postId) {
+        $.ajax({
+            url: '@Url.Action("AddLike", "Likes")',
+            type: 'POST',
+            data: { Id: postId },
+            success: function () {
+                // Оновлення даних на сторінці, якщо потрібно
+            },
+            error: function () {
+                // Обробка помилки, якщо потрібно
+            }
+        });
+    }
+
+    function searchPosts() {
+        var name = $('#name').val();
+        var hashtag = $('#hashtag').val();
+        var userType = $('#user-type').val();
+
+        $.ajax({
+            url: '@Url.Action("SearchPosts", "Posts")',
+            type: 'POST',
+            data: { name: name, hashtag: hashtag, userType: userType },
+            success: function (data) {
+                $('#postContainer').html(data);
+            },
+            error: function () {
+                // Обробка помилки, якщо потрібно
+            }
+        });
+    }
+</script>
