--- a/MyMainDiplomProject/Views/UserAdditionalInfoes/InputOrEdit.cshtml
+++ b/MyMainDiplomProject/Views/UserAdditionalInfoes/InputOrEdit.cshtml
@@ -77,10 +77,10 @@
         @if (Model.Id == 6)
         {
             <div class="user-details-block">
-                <label asp-for="UserAdditional.User.userNikName" class="control-label" style="font-weight: bold; font-size: 36px;">Псевдонім</label>
+                <label asp-for="Name" class="control-label" style="font-weight: bold; font-size: 36px;">Псевдонім</label>
                 <hr style="color: black; margin-bottom: 40px; width: 100%;"></hr>
-                <input asp-for="UserAdditional.User.userNikName" class="form-control" />
-                <span asp-validation-for="UserAdditional.User.userNikName" class="text-danger"></span>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
         }
 
