--- a/MyMainDiplomProject/Views/Posts/Index1.cshtml
+++ b/MyMainDiplomProject/Views/Posts/Index1.cshtml
@@ -31,12 +31,12 @@
     </div>
 
     <div class="post-content">
-        <a href=""><p>#історія</p></a>
-        <a href=""><p>#новини</p></a>
-        <a href=""><p>#ChatGPT</p></a>
-        <a href=""><p>#мистецтво</p></a>
-        <a href=""><p>#LeonardoAI</p></a>
-        <a href=""><p>#фізика</p></a>
+        <a href=""><p>@Model.TopHasTag1</p></a>
+        <a href=""><p>@Model.TopHasTag2</p></a>
+        <a href=""><p>@Model.TopHasTag3</p></a>
+        <a href=""><p>@Model.TopHasTag4</p></a>
+        <a href=""><p>@Model.TopHasTag5</p></a>
+        <a href=""><p>@Model.TopHasTag6</p></a>
     </div>
 </div>
 
